--- a/kitchen.html
+++ b/kitchen.html
@@ -21,10 +21,10 @@
   <div class="row">
     <div class="col-md-3">
       <div class="row">
-        <border><p>Happy Hour</p></border>
+        <center><p>Happy Hour</p></center>
       </div>
       <div class="row">
-        <p>Party Time</p>
+        <center><p>Party Time</p></center>
       </div>
     </div>
     <div class="col-md-3">
