color changed to white

--- a/kitchen.html
+++ b/kitchen.html
@@ -13,7 +13,7 @@
 <body>
   <div class="jumbotron">
      <div class="cool2">
-      <img src="img/assets/logoBig.png" alt="logo">
+      <center><img src="img/assets/logoBig.png" alt="logo"></center>
     </div>
     <h1>We provide the best food<br>at the <strong>right price</h1></br></strong>
   </div>
@@ -29,12 +29,15 @@
     </div>
     <div class="col-md-3">
       <img src="img/assets/foodtop/breakfast.jpg" alt="breakfast">
+      <p class="breakfast">breakfast</p>
     </div>
     <div class="col-md-3">
       <img src="img/assets/foodtop/lunch.jpg" alt="lunch">
+      <p class="lunch">lunch</p>
     </div>
     <div class="col-md-3">
       <img src="img/assets/foodtop/dinner.jpg" alt="dinner">
+      <p class="dinner">dinner</p>
     </div>
 
   </div>
