--- a/kitchen.html
+++ b/kitchen.html
@@ -84,7 +84,11 @@
 </div>
 
 <div class="subscribe">
-  <p>Get our daily food products</p>
+  <p>Get our daily food products on your email</p>
+  <form >
+  your email;
+  <input type="text" name="email">  
+  </form>
 </div>
 
 
