subscribe button added

--- a/kitchen.html
+++ b/kitchen.html
@@ -87,8 +87,9 @@
   <p>Get our daily food products on your email</p>
   <form >
   your email;
-  <input type="text" name="email">  
+  <input type="text" name="email">
   </form>
+  <button type="button" name="button">Subscribe</button>
 </div>
 
 
