logo was added at bottom

--- a/kitchen.html
+++ b/kitchen.html
@@ -91,6 +91,10 @@
   </form>
   <button type="button" name="button">Subscribe</button>
 </div>
+<div class="ending">
+  <img src="logo_white.png" alt="sdd"><h2>MENU</h2>
+</div>``
+
 
 
 
