customer comment added

--- a/kitchen.html
+++ b/kitchen.html
@@ -76,9 +76,7 @@
     <h2>Our Happy Customers</h2>
     <h3>Richard</h3>
     <img src="img/assets/customers/p1.png" alt="customer1"><img src="img/assets/customers/p2.png" alt="customer2"><img src="img/assets/customers/p3.png" alt="customer3">
-  
-
-    <p></p>
+    <p>This guys serve really great food</p>
   </div>
   <div class="col-md-6">
     <h2>About Menu</h2>
