--- a/kitchen.html
+++ b/kitchen.html
@@ -23,10 +23,10 @@
   <div class="row">
     <div class="col-md-3">
       <div class="row">
-        <center><p>Happy Hour</p></center>
+        <center><button id = "happy1">Happy Hour</button></center>
       </div>
       <div class="row">
-        <center><p>Party Time</p></center>
+        <center><button id= "party1">Party Time</button></center>
       </div>
     </div>
     <div class="col-md-3">
@@ -46,9 +46,12 @@
 
   <div class="row">
     <div class="col-md-6">
+      <div class="dope1">
+
       <img src="img/assets/fastFood1.jpg" alt="sdd"><br>
       <img src="img/assets/fastFood2.jpg" alt="sdd"></br>
     </div>
+  </div>
     <div class="col-md-6">
       <strong><h2>Fast Food</h2></strong>
       <strong><h3>You will love our delicious fast food</h3></strong>
@@ -64,35 +67,39 @@
     <p>here at our hotel you can experience delicious drinks such as milk shakes and the one above here.we try as much as possible inorder to get results</p>
   </div>
   <div class="col-md-6">
+    <div class="dope2">
+
     <img src="img/assets/drink1.jpg" alt="sdd">
     <img src="img/assets/drink2.jpg" alt="sdd">
   </div>
+</div>
 </div>
 <div class="back">
 </div>
 
 <div class="row">
   <div class="col-md-6">
+    <div class="customer1">
     <h2>Our Happy Customers</h2>
     <h3>Richard</h3>
     <img src="img/assets/customers/p1.png" alt="customer1"><img src="img/assets/customers/p2.png" alt="customer2"><img src="img/assets/customers/p3.png" alt="customer3">
     <p>This guys serve really great food</p>
-  </div>
+
   <div class="col-md-6">
     <h2>About Menu</h2>
     <p>Our menu is made based on the customer experience that is there inorder to provide great customer experience.this is why this great hotel exist</p>
   </div>
 </div>
-
-<div class="subscribe">
+</div>
+<center><div class="subscribe">
   <p>Get our daily food products on your email</p>
   <form >
   your email;
   <input type="text" name="email">
   </form>
   <button type="button"id="sub1" name="button">Subscribe</button>
-</div>
-<center><div class="footer">
+</div></center>
+<center><div class="footer1">
   <img src="img/assets/footerlogos/logo_white.png" alt="logo"><h2>MENU</h2>
   <img src="img/assets/footerlogos/facebook.png" alt="facebook">
   <img src="img/assets/footerlogos/twitter.png" alt="twitter">
