--- a/kitchen.html
+++ b/kitchen.html
@@ -17,7 +17,7 @@
      <div class="cool2">
       <center><img src="img/assets/logoBig.png" alt="logo"></center>
     </div>
-    <h1>We provide the best food<br>at the <strong>right price</h1></br></strong>
+    <h1> <div id ="top1"> We provide the best food!<br>at the <strong>right price</h1></br></strong></div>
   </div>
 
   <div class="row">
@@ -77,26 +77,32 @@
 <div class="back">
 </div>
 
+
+<div class="customer1">
 <div class="row">
   <div class="col-md-6">
-    <div class="customer1">
-    <h2>Our Happy Customers</h2>
+
+  <h2>Our Happy Customers</h2>
     <h3>Richard</h3>
     <img src="img/assets/customers/p1.png" alt="customer1"><img src="img/assets/customers/p2.png" alt="customer2"><img src="img/assets/customers/p3.png" alt="customer3">
     <p>This guys serve really great food</p>
-
+  </div>
   <div class="col-md-6">
     <h2>About Menu</h2>
     <p>Our menu is made based on the customer experience that is there inorder to provide great customer experience.this is why this great hotel exist</p>
   </div>
 </div>
 </div>
+</div>
 <center><div class="subscribe">
-  <p>Get our daily food products on your email</p>
-  <form >
+  <p>Get our daily food products on your email</p><form >
   your email;
   <input type="text" name="email">
   </form>
+  <!-- <form >
+  your email;
+  <input type="text" name="email">
+  </form> -->
   <button type="button"id="sub1" name="button">Subscribe</button>
 </div></center>
 <center><div class="footer1">
