footer page added

--- a/kitchen.html
+++ b/kitchen.html
@@ -17,7 +17,7 @@
      <div class="cool2">
       <center><img src="img/assets/logoBig.png" alt="logo"></center>
     </div>
-    <h1> <div id ="top1"> We provide the best food!<br>at the <strong>right price</h1></br></strong></div>
+    <h1> <div id ="top1"> We provide the best food<br>at the <strong>right price!</h1></br></strong></div>
   </div>
 
   <div class="row">
@@ -53,19 +53,23 @@
     </div>
   </div>
     <div class="col-md-6">
+      <div class="food1">
       <strong><h2>Fast Food</h2></strong>
       <strong><h3>You will love our delicious fast food</h3></strong>
       <p>At our hotel we provide the best food that we can provide.we tend to focus more on customer experience</p>
   </div>
 </div>
+</div>
 
 
 <div class="row">
   <div class="col-md-6">
+    <div class="food2">
     <strong><h2>Drinks</h2></strong>
     <strong><h3>We also produce delicious drinks</h3></strong>
     <p>here at our hotel you can experience delicious drinks such as milk shakes and the one above here.we try as much as possible inorder to get results</p>
   </div>
+</div>
   <div class="col-md-6">
     <div class="dope2">
 
@@ -83,33 +87,32 @@
   <div class="col-md-6">
 
   <h2>Our Happy Customers</h2>
-    <h3>Richard</h3>
-    <img src="img/assets/customers/p1.png" alt="customer1"><img src="img/assets/customers/p2.png" alt="customer2"><img src="img/assets/customers/p3.png" alt="customer3">
+    <h3>Richard</h3><span>
+    <img src="img/assets/customers/p1.png" alt="customer1"><img src="img/assets/customers/p2.png" alt="customer2"><img src="img/assets/customers/p3.png" alt="customer3"></span><span>
     <p>This guys serve really great food</p>
-  </div>
+  </div></span>
   <div class="col-md-6">
     <h2>About Menu</h2>
-    <p>Our menu is made based on the customer experience that is there inorder to provide great customer experience.this is why this great hotel exist</p>
+    <p>Our menu is made based on the customer experience that is there inorder to provide great customer experience.this is why this great hotel exist.we offer all kinds of food depending on what the customer wannts to consume </p>
   </div>
 </div>
 </div>
 </div>
 <center><div class="subscribe">
-  <p>Get our daily food products on your email</p><form >
-  your email;
+
+  <p id="sub2">Get our daily food products on your email!</p>
+     your email;
   <input type="text" name="email">
-  </form>
-  <!-- <form >
-  your email;
-  <input type="text" name="email">
-  </form> -->
-  <button type="button"id="sub1" name="button">Subscribe</button>
+</form>
+
+  <button type="button"id="sub1" name="button">subscribe</button>
 </div></center>
 <center><div class="footer1">
   <img src="img/assets/footerlogos/logo_white.png" alt="logo"><h2>MENU</h2>
   <img src="img/assets/footerlogos/facebook.png" alt="facebook">
   <img src="img/assets/footerlogos/twitter.png" alt="twitter">
   <img src="img/assets/footerlogos/pinterest.png" alt="pinterest">
+  <h6>this is what we are</h6>
 </div></center>
 
 
