--- a/kitchen.html
+++ b/kitchen.html
@@ -23,10 +23,10 @@
   <div class="row">
     <div class="col-md-3">
       <div class="row">
-        <center><button id = "happy1">Happy Hour</button></center>
+        <center><p id="happy1">Happy Hour</p></center>
       </div>
       <div class="row">
-        <center><button id= "party1">Party Time</button></center>
+        <center><p id="party1">Party Time</p></center>
       </div>
     </div>
     <div class="col-md-3">
