--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/css/bootstrap.css" style="text/css">
-  <link rel="stylesheet" href="css/stylesheet.css" style="text/css">
+  <link rel="stylesheet" href="css/styles.css" style="text/css">
   <link src="js/jquery.js">
   <link src="js/script.js">
   <title></title>
