--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/css/bootstrap.css" style="text/css">
-  <link rel="stylesheet" href="css/styles.css" style="text/css">
+  <link rel="stylesheet" href="stylecss/bootstrap.css" style="text/css">
+  <link rel="stylesheet" href="stylecss/style.css" style="text/css">
   <link src="js/jquery.js">
   <link src="js/script.js">
   <title></title>
