--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </div>
 
   <div class="row">
-    <div class="col-md-3">
+    <div class="col-md-3 col-xs-12 col-sm-12 col-lg-3">
       <div class="row">
         <center><p id="happy1">Happy Hour</p></center>
       </div>
@@ -29,15 +29,15 @@
         <center><p id="party1">Party Time</p></center>
       </div>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3 col-xs-12 col-sm-12 col-lg-3">
       <img src="img/assets/foodtop/breakfast.jpg" alt="breakfast">
       <p class="breakfast">breakfast</p>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3 col-xs-12 col-sm-12 col-lg-3">
       <img src="img/assets/foodtop/lunch.jpg" alt="lunch">
       <p class="lunch">lunch</p>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3 col-xs-12 col-sm-12 col-lg-3">
       <img src="img/assets/foodtop/dinner.jpg" alt="dinner">
       <p class="dinner">dinner</p>
     </div>
@@ -45,14 +45,14 @@
 
 
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-6 col-xs-12 col-sm-12 col-lg-6">
       <div class="dope1">
 
       <img src="img/assets/fastFood1.jpg" alt="sdd"><br>
       <img src="img/assets/fastFood2.jpg" alt="sdd"></br>
     </div>
   </div>
-    <div class="col-md-6">
+    <div class="col-md-6 col-xs-12 col-sm-12 col-lg-6">
       <div class="food1">
       <strong><h2>Fast Food</h2></strong>
       <strong><h3>You will love our delicious fast food</h3></strong>
@@ -63,14 +63,14 @@
 
 
 <div class="row">
-  <div class="col-md-6">
+  <div class="col-md-6 col-xs-12 col-sm-12 col-lg-6">
     <div class="food2">
     <strong><h2>Drinks</h2></strong>
     <strong><h3>We also produce delicious drinks</h3></strong>
     <p>here at our hotel you can experience delicious drinks such as milk shakes and the one above here.we try as much as possible inorder to get results</p>
   </div>
 </div>
-  <div class="col-md-6">
+  <div class="col-md-6 col-xs-12 col-sm-12 col-lg-6">
     <div class="dope2">
 
     <img src="img/assets/drink1.jpg" alt="sdd">
@@ -78,26 +78,60 @@
   </div>
 </div>
 </div>
-<div class="back">
-</div>
+<center><div class="back">
+  <div class="row kempinski text-center">
+				<div class="col-md-8 col-xs-12 col-sm-12 col-lg-8 col-md-2">
+
+					<div class="row"> <!--vavigation for the fast food-->
+						<div id="selected" class="col-md-3 col-xs-12 col-sm-12 col-lg-3">Fast Food</div>
+						<div id="lonely" class="col-md-3 col-xs-12 col-sm-12 col-lg-3">Drinks</div>
+						<div id="lonely" class="col-md-3 col-xs-12 col-sm-12 col-lg-3">Chicken</div>
+						<div id="lonely" class="col-md-3 col-xs-12 col-sm-12 col-lg-3">Rice</div>
+					</div>
+
+
+					<div class="row"> <!--images at the fast food gallery-->
+						<div  id="menyu" class="col-md-4 col-xs-12 col-sm-12 col-lg-4">
+							<img src="img/assets/fastfood/chickenBurger.jpg" alt="">
+								<br>
+								<br>
+							<span>Chicken Burger</span>
+						</div>
+						<div  id="menyu" class="col-md-4 col-xs-12 col-sm-12 col-lg-4">
+							<img src="img/assets/fastfood/beefBurger.jpg" alt="">
+								<br>
+								<br>
+							<span>Chicken Burger</span>
+						</div>
+						<div  id="menyu" class="col-md-4 col-xs-12 col-sm-12 col-lg-4">
+							<img src="img/assets/fastfood/chickenPizza.jpg" alt="">
+								<br>
+								<br>
+							<span>Chicken Burger</span>
+
+						</div>
+					</div>
+				</div>
+      </div>
+</div></center>
 
 
 <div class="customer1">
 <div class="row">
-  <div class="col-md-6">
+  <div class="col-md-6 col-xs-12 col-sm-12 col-lg-6">
 
   <h2>Our Happy Customers</h2>
     <h3>Richard</h3><span>
     <img src="img/assets/customers/p1.png" alt="customer1"><img src="img/assets/customers/p2.png" alt="customer2"><img src="img/assets/customers/p3.png" alt="customer3"></span><span>
     <p>This guys serve really great food</p>
   </div></span>
-  <div class="col-md-6">
+  <div class="col-md-6 col-xs-12 col-sm-12 col-lg-6">
     <h2>About Menu</h2>
     <p>Our menu is made based on the customer experience that is there inorder to provide great customer experience.this is why this great hotel exist.we offer all kinds of food depending on what the customer wannts to consume </p>
   </div>
 </div>
 </div>
-</div>
+
 <center><div class="subscribe">
 
   <p id="sub2">Get our daily food products on your email!</p>
