new changes made

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 
 <body>
 
+
   <div class="jumbotron">
+    <div class="glyphicon glyphicon-menu-hamburger">
+    </div>
      <div class="cool2">
       <center><img src="img/assets/logoBig.png" alt="logo"></center>
     </div>
@@ -56,7 +59,8 @@
       <div class="food1">
       <strong><h2>Fast Food</h2></strong>
       <strong><h3>You will love our delicious fast food</h3></strong>
-      <p>At our hotel we provide the best food that we can provide.we tend to focus more on customer experience</p>
+      <p>At our hotel we provide the best food that we can provide.we tend to focus more on customer experience.<span>this is the reason why most of our customers end</span> <span>up feeling happy by the time they end up using</span> <span>our service.this is the best service</span> we can give you.</p>
+      <button type="button"id="gallery"class="btn">VIEW GALLERY <span class="arrow">&rarr;</span></button>
   </div>
 </div>
 </div>
@@ -67,7 +71,9 @@
     <div class="food2">
     <strong><h2>Drinks</h2></strong>
     <strong><h3>We also produce delicious drinks</h3></strong>
-    <p>here at our hotel you can experience delicious drinks such as milk shakes and the one above here.we try as much as possible inorder to get results</p>
+    <p>here at our hotel you can experience delicious drinks such as milk shakes and the one above here.we try as much as possible inorder to get results.most of the drinks we offer are healthy since we dont have any food scientist who may fall into temptation of termpering with your taste buds.we
+    would like to addvice you that you should enjoy your juice in a very comfortable manner in this great hotel of ours in this life. </p>
+    <button type="button"id="gallery"class="btn">VIEW GALLERY <span class="arrow">&rarr;</span></button>
   </div>
 </div>
   <div class="col-md-6 col-xs-12 col-sm-12 col-lg-6">
@@ -90,25 +96,25 @@
 					</div>
 
 
+
 					<div class="row"> <!--images at the fast food gallery-->
-						<div  id="menyu" class="col-md-4 col-xs-12 col-sm-12 col-lg-4">
+						<div  class="menyu col-md-4 col-xs-12 col-sm-12 col-lg-4">
 							<img src="img/assets/fastfood/chickenBurger.jpg" alt="">
 								<br>
 								<br>
 							<span>Chicken Burger</span>
 						</div>
-						<div  id="menyu" class="col-md-4 col-xs-12 col-sm-12 col-lg-4">
+						<div  class="menyu col-md-4 col-xs-12 col-sm-12 col-lg-4">
 							<img src="img/assets/fastfood/beefBurger.jpg" alt="">
 								<br>
 								<br>
-							<span>Chicken Burger</span>
+							<span>beef Burger</span>
 						</div>
-						<div  id="menyu" class="col-md-4 col-xs-12 col-sm-12 col-lg-4">
+						<div  class="menyu col-md-4 col-xs-12 col-sm-12 col-lg-4">
 							<img src="img/assets/fastfood/chickenPizza.jpg" alt="">
 								<br>
 								<br>
-							<span>Chicken Burger</span>
-
+							<span>Chicken pizza</span>
 						</div>
 					</div>
 				</div>
@@ -133,20 +139,23 @@
 </div>
 
 <center><div class="subscribe">
-
   <p id="sub2">Get our daily food products on your email!</p>
-     your email;
-  <input type="text" name="email">
+ <form id="form1">
+  <div class="form-Group">
+  <input type="text" name="email" class="email">
+  <label for=""><button type="button"id="sub1"class="btn">subscribe</button></label>
+  </div>
 </form>
 
-  <button type="button"id="sub1" name="button">subscribe</button>
+
 </div></center>
 <center><div class="footer1">
   <img src="img/assets/footerlogos/logo_white.png" alt="logo"><h2>MENU</h2>
+  <h6>this is what we are</h6>
   <img src="img/assets/footerlogos/facebook.png" alt="facebook">
   <img src="img/assets/footerlogos/twitter.png" alt="twitter">
   <img src="img/assets/footerlogos/pinterest.png" alt="pinterest">
-  <h6>this is what we are</h6>
+    <h6>2016 menu resturant</h6>
 </div></center>
 
 
