--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <center><p id="party1">Party Time</p></center>
       </div>
     </div>
+    <div class="colimages">
     <div class="col-md-3 col-xs-12 col-sm-12 col-lg-3">
       <img src="img/assets/foodtop/breakfast.jpg" alt="breakfast">
       <p class="breakfast">breakfast</p>
@@ -44,6 +45,7 @@
       <img src="img/assets/foodtop/dinner.jpg" alt="dinner">
       <p class="dinner">dinner</p>
     </div>
+</div>
 </div>
 
 
@@ -99,7 +101,7 @@
 
 					<div class="row"> <!--images at the fast food gallery-->
 						<div  class="menyu col-md-4 col-xs-12 col-sm-12 col-lg-4">
-							<img src="img/assets/fastfood/chickenBurger.jpg" alt="">
+							<img src="img/assets/fastfood/chickenBurger.jpg" alt=""><div class="glyphicon glyphicon-chevron-left"></div>
 								<br>
 								<br>
 							<span>Chicken Burger</span>
@@ -111,7 +113,7 @@
 							<span>beef Burger</span>
 						</div>
 						<div  class="menyu col-md-4 col-xs-12 col-sm-12 col-lg-4">
-							<img src="img/assets/fastfood/chickenPizza.jpg" alt="">
+							<img src="img/assets/fastfood/chickenPizza.jpg" alt=""><div class="glyphicon glyphicon-chevron-right"></div>
 								<br>
 								<br>
 							<span>Chicken pizza</span>
@@ -128,7 +130,7 @@
 
   <h2>Our Happy Customers</h2>
     <h3>Richard</h3><span>
-    <img src="img/assets/customers/p1.png" alt="customer1"><img src="img/assets/customers/p2.png" alt="customer2"><img src="img/assets/customers/p3.png" alt="customer3"></span><span>
+    <div id="arrow6" class="glyphicon glyphicon-chevron-left"></div><img src="img/assets/customers/p1.png" alt="customer1"><img src="img/assets/customers/p2.png" alt="customer2"><img src="img/assets/customers/p3.png" alt="customer3"><div id="arrow5" class="glyphicon glyphicon-chevron-right"></div></span><span>
     <p>This guys serve really great food</p>
   </div></span>
   <div class="col-md-6 col-xs-12 col-sm-12 col-lg-6">
