--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
   <h2>Our Happy Customers</h2>
     <h3>Richard</h3><span>
-    <div id="arrow6" class="glyphicon glyphicon-chevron-left"><img src="img/assets/customers/p1.png" alt="customer1"><img src="img/assets/customers/p2.png" alt="customer2"><img src="img/assets/customers/p3.png" alt="customer3"></span><span><div id="arrow5" class="glyphicon glyphicon-chevron-right">
+    <div id="arrow6" class="glyphicon glyphicon-chevron-left"></div><img src="img/assets/customers/p1.png" alt="customer1"><img src="img/assets/customers/p2.png" alt="customer2"><img src="img/assets/customers/p3.png" alt="customer3"></span><span><div id="arrow5" class="glyphicon glyphicon-chevron-right"></div>
     <p>This guys serve really great food</p>
   </div></span>
   <div class="col-md-6 col-xs-12 col-sm-12 col-lg-6">
